// ------------------------------------------------------------
// Copyright (c) Microsoft Corporation.  All rights reserved.
// Licensed under the MIT License (MIT). See License in the repo root for
// license information.
// ------------------------------------------------------------

syntax = "proto3";

package rcstore_rpc;

service rcstore_service {
  rpc add (add_request) returns (add_response) {}
  rpc get (get_request) returns (get_response) {}
  rpc remove(remove_request) returns (remove_response){}
  rpc enumerate_all(enumerate_request) returns (enumerate_response){}
}

message add_request {
  string store_url = 1;
  string key = 2;
  string val = 3;
}
message add_response {}

message get_request {
  string store_url = 1;
  string key = 2;
}
message get_response {
  string val = 1;
}

message remove_request{
  string store_url = 1;
  string key = 2;
  int64 conditional_version = 3;
}
message remove_response{
  bool removed = 1;
}

message enumerate_request{
  string store_url = 1;
}
message enumerate_response{
  message key_value{
    string key = 1;
    string value = 2;
  }
  repeated key_value payload = 1;
}